@@ -2,6 +2,7 @@
 	* [Renderer] Added support for the Wavefront .OBJ model file format
 	* [Renderer] Mirror surfaceType in rb_surfaceTable
 	* [Misc] Fixed compiling
+	* [Engine] Wide screen fixes
 
 2021-05-09 Dusan Jocic <dusanjocic@msn.com>
 	* [Engine] Reverted to the old implementation of the DefaultHomePath
